#!/usr/bin/env ruby
# frozen_string_literal: true

# Transaction Service - Ruby Implementation
# Entry point for the transaction business logic gRPC server.

require 'grpc'
require 'grpc/health/checker'
require 'grpc/health/v1/health_services_pb'
require 'json'
require 'time'

# Load generated proto files
$LOAD_PATH.unshift(File.join(__dir__, 'lib'))
require 'angzarr/angzarr_services_pb'
require 'examples/domains_pb'
require_relative 'lib/transaction_logic'
require_relative 'lib/command_validation_error'

DOMAIN = 'transaction'

# gRPC service adapter for transaction business logic.
# Thin wrapper that delegates to TransactionLogic and maps exceptions to gRPC status codes.
class TransactionService < Angzarr::BusinessLogic::Service
  def handle(contextual_cmd, _call)
    cmd_book = contextual_cmd.command
    prior_events = contextual_cmd.events

    raise GRPC::InvalidArgument, 'CommandBook has no pages' if cmd_book.pages.empty?

    cmd_page = cmd_book.pages.first
    raise GRPC::InvalidArgument, 'Command page has no command' unless cmd_page.command

    state = TransactionLogic.rebuild_state(prior_events)
    type_url = cmd_page.command.type_url
    cmd_data = cmd_page.command.value

    event = dispatch_command(type_url, cmd_data, state)
    event_book = create_event_book(cmd_book.cover, event)

    Angzarr::BusinessResponse.new(events: event_book)
  rescue CommandValidationError => e
    raise_grpc_error(e)
  end

  private

  def dispatch_command(type_url, cmd_data, state)
    case
    when type_url.end_with?('CreateTransaction')
      cmd = Examples::CreateTransaction.decode(cmd_data)
      log_info('creating_transaction', customer_id: cmd.customer_id, item_count: cmd.items.size)
      TransactionLogic.handle_create_transaction(state, cmd.customer_id, cmd.items.to_a)
    when type_url.end_with?('ApplyDiscount')
      cmd = Examples::ApplyDiscount.decode(cmd_data)
      log_info('applying_discount', discount_type: cmd.discount_type, value: cmd.value)
      TransactionLogic.handle_apply_discount(state, cmd.discount_type, cmd.value)
    when type_url.end_with?('CompleteTransaction')
      cmd = Examples::CompleteTransaction.decode(cmd_data)
      log_info('completing_transaction', payment_method: cmd.payment_method)
      TransactionLogic.handle_complete_transaction(state, cmd.payment_method)
    when type_url.end_with?('CancelTransaction')
      cmd = Examples::CancelTransaction.decode(cmd_data)
      log_info('cancelling_transaction', reason: cmd.reason)
      TransactionLogic.handle_cancel_transaction(state, cmd.reason)
    else
      raise GRPC::InvalidArgument, "Unknown command type: #{type_url}"
    end
  end

  def create_event_book(cover, event)
    type_name = event.class.name.split('::').last
    type_name = "examples.#{type_name}"

    event_any = Google::Protobuf::Any.new(
      type_url: "type.examples/#{type_name}",
      value: event.to_proto
    )

    Angzarr::EventBook.new(
      cover: cover,
      pages: [
        Angzarr::EventPage.new(
          num: 0,
          event: event_any,
          created_at: Google::Protobuf::Timestamp.new(seconds: Time.now.to_i)
        )
      ]
    )
  end

  def raise_grpc_error(error)
    case error.status_code
    when CommandValidationError::INVALID_ARGUMENT
      raise GRPC::InvalidArgument, error.message
    when CommandValidationError::FAILED_PRECONDITION
      raise GRPC::FailedPrecondition, error.message
    else
      raise GRPC::Unknown, error.message
    end
  end

  def log_info(message, **fields)
    puts JSON.generate({ level: 'info', message: message, domain: DOMAIN, **fields, timestamp: Time.now.iso8601 })
  end
end

def main
  port = ENV.fetch('PORT', '50053')

  server = GRPC::RpcServer.new
  server.add_http2_port("0.0.0.0:#{port}", :this_port_is_insecure)
  server.handle(TransactionService)

  # Register gRPC health service
  health_checker = Grpc::Health::Checker.new
  health_checker.add_status('', Grpc::Health::V1::HealthCheckResponse::ServingStatus::SERVING)
  server.handle(health_checker)

  puts JSON.generate({ level: 'info', message: 'business_logic_server_started', domain: DOMAIN, port: port, timestamp: Time.now.iso8601 })

  server.run_till_terminated
end

main if __FILE__ == $PROGRAM_NAME
